chore: Bump Flow and components to 24.2 (#88)